--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-03.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-03.html
@@ -16,6 +16,8 @@
 
 <body>
 
+<p><a href="index.html">[Table of Contents]</a></p>
+
 <center><h1><u>Eldamo Introductory Quenya - Chapter 3</u></h1></center>
 
 <ul>
@@ -140,7 +142,7 @@
 
 <p>The sound of <i>ty</i> is called “palatized” because it involves the addition of a <i>y</i> sound, and <i>qu</i> [kw] labialized because it involves the addition of a <i>w</i>. The sounds <i>ny</i> and <i>ñw</i> are similar. In IPA, these could be represented as <i>ny</i> = [nʲ], <i>ty</i> = [tʲ]; <i>ñw</i> = [ŋʷ], <i>qu</i> = [kʷ], where IPA [j] is pronounced like English “y”. In the case of the <i>ny, ty</i> these are probably realized as pure palatals (IPA [ɲ], [c]). For English speakers, I think think its easier to just pronounce <i>n</i> + <i>y</i>, <i>t</i> + <i>y</i>, <i>k</i> + <i>w</i>, etc. In the cases of <i>ñw</i>, Tolkien said this was the “older” pronunciation (see the next section) and the modern pronunciation is <i>nw</i> = <i>n</i> + <i>w</i> (LotR/1123).</p>
 
-<p>These sounds show up in words like <i>nyárë</i> “tale, history”, <i>tyávë</i> “taste”, <i>quessë</i> “feather” and <i>nwalmë</i> “torment” (older pronunciation †<i>ñwalmë</i> or †<i>ngwalmë</i>).</p>
+<p>These sounds show up in words like <i>nyárë</i> “tale”, <i>tyávë</i> “taste”, <i>quessë</i> “feather” and <i>nwalmë</i> “torment” (older pronunciation †<i>ñwalmë</i> or †<i>ngwalmë</i>).</p>
 
 <p><a id="c3-1-1-5"></a><b>3.1.1.5 The letter <i>x</i>:</b> The letter <i>x</i> in Quenya is pronounced like [ks] just as in English. Thus <i>raxa</i> “wagon” is pronounced [raksa]. Even though it is represented as a single letter, it still counts as a consonant cluster, and therefore the preceding syllable will attract stress, unless of course there is another stressed syllable later in the word. Thus <i>raxa</i> “RAHK.sah” but <i>raxallo</i> “rahk.SAHL.loh”.</p>
 
@@ -153,7 +155,7 @@
 <ul>
 <li><b><a href="#c3-1-2-1">3.1.2.1 Archaic Consonants</a></b></li>
 <li><b><a href="#c3-1-2-2">3.1.2.2 The Spelling of Quenya Words</a></b></li>
-<li class="advanced-topic"><b><a href="#c3-1-2-3">3.1.2.3 Archaic For Who?</b></li>
+<li class="advanced-topic"><b><a href="#c3-1-2-3">3.1.2.3 Advanced Topic: Archaic For Who?</b></li>
 </ul>
 
 <p><a id="c3-1-2-1"></a><b>3.1.2.1 Archaic Consonants:</b> In the previous chapter in section <a href="eldamo-intro-quenya-02.html#c2-4">2.4 Reading Vocabulary Entries</a>, we mentioned several “archaic pronunciation” markers:</p>
@@ -196,7 +198,7 @@
 <p>Finally, it is worth noting that some Neo-Quenya writers use the letters <i>w</i>, <i>ñ</i> and <i>þ</i> when writing Quenya, either because they are trying to represent the tengwa spelling or are deliberately emulating a particular style. So it is not unusual to see words like <i>wendë</i>, <i>néþa</i> and <i>ñandë</i> in Neo-Quena writing. For consistency, though, this course uses the spelling and pronunciation recommendations of Appendix E.</p>
 
 <div class="advanced-topic">
-<p><a id="c3-1-2-3"></a><b>3.1.2.3 Archaic For Who?</b> In Appendix E, Tolkien was pretty clear that “s” and “n” were the modern pronunciation of Quenya in the Third Age, but he was a bit vague on who actually <u>used</u> that pronunciation. In his private writings, he changed his mind several times on which groups of Elves used which pronunciation. He sometimes ascribed the <i>þ</i> &gt; <i>s</i> and/or <i>ñ</i> &gt; <i>n</i> sounds change to the Vanyar and sometimes to the Noldor. He also considered various pronunciation reforms after the Noldor encountered the Sindar, who had both the “þ” and “ñ” sounds in their language. In some cases Tolkien even assigned particular pronunciations to Men only. The vacillations on which group used which pronunciation are a bit too much for a beginner’s course, so we are sticking to the Appendix E rules but without saying who actually used those rules.</p>
+<p><a id="c3-1-2-3"></a><b>3.1.2.3 Advanced Topic: Archaic For Who?</b> In Appendix E, Tolkien was pretty clear that “s” and “n” were the modern pronunciation of Quenya in the Third Age, but he was a bit vague on who actually <u>used</u> that pronunciation. In his private writings, he changed his mind several times on which groups of Elves used which pronunciation. He sometimes ascribed the <i>þ</i> &gt; <i>s</i> and/or <i>ñ</i> &gt; <i>n</i> sounds change to the Vanyar and sometimes to the Noldor. He also considered various pronunciation reforms after the Noldor encountered the Sindar, who had both the “þ” and “ñ” sounds in their language. In some cases Tolkien even assigned particular pronunciations to Men only. The vacillations on which group used which pronunciation are a bit too much for a beginner’s course, so we are sticking to the Appendix E rules but without saying who actually used those rules.</p>
 </div>
 
 <h2><a id="c3-1-3"></a>3.1.3 Vocabulary: Language</h2>
@@ -257,7 +259,7 @@
 <p>The instrumental case is used for the instrument or means by which a thing occurs, and can be translated “by, with” (but not in the sense “by” = “beside someone” or “with” = “together with”):</h2>
 
 <ul>
-<li><b>Instrumental Singular:</b> This case uses the suffix <i>-nen</i> in the singular: <i>parmanen</i> “with/by a book”. <span class="advanced-topic">Speculative:</span> This becomes <i>-men</i> after <i>l, r</i> and <i>-wen</i> after <i>c, n, t</i>: <i>tecilmen</i> “with/by a pen”, <i>hyalinwen</i> “with/by paper”.
+<li><b>Instrumental Singular:</b> This case uses the suffix <i>-nen</i> in the singular: <i>parmanen</i> “with/by a book”. <span class="advanced-topic">Speculative:</span> This becomes <i>-men</i> after <i>l, r</i> and <i>-wen</i> after <i>n, t</i>: <i>tecilmen</i> “with/by a pen”, <i>hyalinwen</i> “with/by paper”.
 <ul>
 <li><i>i atan anta i elda parmanen</i> “the man presents the elf with a book”.</li>
 <li><i>i elda tencë i nyárë tecilmen</i> “the elf wrote the tale with a pen”.</li>
@@ -301,7 +303,7 @@
 <li>In the plural, the dative suffix become <i>-in</i>, replacing a final <i>ë</i> if there is one.</li>
 </ul></li>
 <li><b>Instrumental:</b> Instrumental describes the means by which something happens, with the suffix <i>-nen</i> in the singular, usually translated in English as “with” or “by”.<ul>
-<li><span class="advanced-topic">Speculative:</span> After <i>r, l</i>, the instrumental suffix becomes <i>-men</i>, and after <i>c, n, t</i> it becomes <i>-wen</i>.</li>
+<li><span class="advanced-topic">Speculative:</span> After <i>r, l</i>, the instrumental suffix becomes <i>-men</i>, and after <i>n, t</i> it becomes <i>-wen</i>.</li>
 <li>In the plural, the instrumental suffix becomes <i>-inen</i> after the vowels <i>a, o, u</i>, and <i>-ínen</i> otherwise, replacing final vowels <i>ë, i</i>.</li>
 </ul></li>
 </ul>
@@ -567,7 +569,7 @@
 <ul>
 <li>Note ¹: Singular subject pronouns have short and long forms, with the short form being more common unless object suffixes are added. The exception is <i>-t(yë)</i>, where the long form <i>-tyë</i> is much more common and short <i>-t</i> should generally be avoided.</li>
 <li>Note ²: The possessive suffixes require a joining vowel when added to a noun ending in a consonant. The exception is <i>-(r)ya</i>, which uses <i>-ya</i> after a consonant and <i>-rya</i> after a vowel.</li>
-<li>Note ³: Popular variants of the 3rd pl. pronoun suffixes are <i>-ltë, -(i)lta, -lta</i>; both <i>-ltë</i> and <i>-ntë</i> were used often enough by Tolkien that it is hard to say which he preferred. This course uses <i>-ntë</i> throughout for consistency.</li>
+<li>Note ³: Popular variants of the 3rd pl. pronoun suffixes are <i>-ltë, -(i)lta</i>; both <i>-ltë</i> and <i>-ntë</i> were used often enough by Tolkien that it is hard to say which he preferred. This course uses <i>-ntë</i> throughout for consistency.</li>
 </ul>
 
 <h2><a id="x3-2"></a>Exercise 3.2</h2>
@@ -1198,7 +1200,7 @@ Maybe even thou shalt find it. Farewell!
 <li><b>mer-</b> <i>v.</i> “to hope, wish, want”
 <ul><li><i>pa.t.</i> <b>mernë</b> “hoped, wished, wanted”</li></ul></li>
 <li><b>nwalmë</b> [<b>ñ-</b>] <i>v.</i> “torment”</li>
-<li><b>ó</b> <i>prep.</i> “with, together with”</li>
+<li><b>ó</b> <i>prep.</i> “(together) with”</li>
 <li><b>ohta</b> <i>n.</i> “war”</li>
 <li><b>quessë</b> <i>n.</i> “feather”</li>
 <li><b>tyávë</b> <i>n.</i> “taste”</li>
@@ -1245,7 +1247,7 @@ Maybe even thou shalt find it. Farewell!
 <li>In the plural, the dative suffix become <i>-in</i>, replacing a final <i>ë</i> if there is one.</li>
 </ul></li>
 <li><b>Instrumental:</b> Instrumental describes the means by which something happens, with the suffix <i>-nen</i> in the singular, usually translated in English as “with” or “by”.<ul>
-<li><span class="advanced-topic">Speculative:</span> After <i>r, l</i>, the instrumental suffix becomes <i>-men</i>, and after <i>c, n, t</i> it becomes <i>-wen</i>.</li>
+<li><span class="advanced-topic">Speculative:</span> After <i>r, l</i>, the instrumental suffix becomes <i>-men</i>, and after <i>n, t</i> it becomes <i>-wen</i>.</li>
 <li>In the plural, the instrumental suffix becomes <i>-inen</i> after the vowels <i>a, o, u</i>, and <i>-ínen</i> otherwise, replacing final vowels <i>ë, i</i>.</li>
 </ul></li>
 </ul>
@@ -1271,7 +1273,7 @@ Maybe even thou shalt find it. Farewell!
 <ul>
 <li>Note ¹: Singular subject pronouns have short and long forms, with the short form being more common unless object suffixes are added. The exception is <i>-t(yë)</i>, where the long form <i>-tyë</i> is much more common and short <i>-t</i> should generally be avoided.</li>
 <li>Note ²: The possessive suffixes require a joining vowel when added to a noun ending in a consonant. The exception is <i>-(r)ya</i>, which uses <i>-ya</i> after a consonant and <i>-rya</i> after a vowel.</li>
-<li>Note ³: Popular variants of the 3rd pl. pronoun suffixes are <i>-ltë, -(i)lta, -lta</i>; both <i>-ltë</i> and <i>-ntë</i> were used often enough by Tolkien that it is hard to say which he preferred. This course uses <i>-ntë</i> throughout for consistency.</li>
+<li>Note ³: Popular variants of the 3rd pl. pronoun suffixes are <i>-ltë, -(i)lta</i>; both <i>-ltë</i> and <i>-ntë</i> were used often enough by Tolkien that it is hard to say which he preferred. This course uses <i>-ntë</i> throughout for consistency.</li>
 </ul>
 
 <p><a id="c3-6-2-4"></a><b>3.6.2.4 Future, Commands and Wishes Summary:</b></p>
