--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-04.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-04.html
@@ -16,6 +16,8 @@
 
 <body>
 
+<p><a href="index.html">[Table of Contents]</a></p>
+
 <center><h1><u>Eldamo Introductory Quenya - Chapter 4</u></h1></center>
 
 <ul>
@@ -94,7 +96,7 @@
 
 <ul>
 <li><b><a href="#c4-1-1-1">4.1.1.1 Simplified Tengwar Chart</a></b>
-<li class="advanced-topic"><b><a href="#c4-1-1-2">4.1.1.2 Featural Aspects of Tengwar</a></b>
+<li class="advanced-topic"><b><a href="#c4-1-1-2">4.1.1.2 Advanced Topic: Featural Aspects of Tengwar</a></b>
 </ul>
 
 <p><a id="c4-1-1-1"></a><b>4.1.1.1 Simplified Tengwar Chart:</b> Recall that the basic consonants of Quenya are:</p>
@@ -207,7 +209,7 @@
 </ul>
 
 <div class="advanced-topic">
-<p><a id="c4-1-1-2"></a><b>4.1.1.2 Featural Aspects of Tengwar:</b> The tengwar are a featural writing system, where the shape of the letter indicates the sound of the word. Korean Hangul is a good example of a real-world featural writing system. To understand the featural aspect of tengwar, you need to know a bit about how linguists classify sounds. The tengwar chart is arranged into rows and columns. Each column (<i>téma</i>) represents the “place of articulation”, the location in the mouth where the sound is made. Each row  (<i>tyellë</i>) represents the “method of articulation”, the way in which the sound is made.</p>
+<p><a id="c4-1-1-2"></a><b>4.1.1.2 Advanced Topic: Featural Aspects of Tengwar:</b> The tengwar are a featural writing system, where the shape of the letter indicates the sound of the word. Korean Hangul is a good example of a real-world featural writing system. To understand the featural aspect of tengwar, you need to know a bit about how linguists classify sounds. The tengwar chart is arranged into rows and columns. Each column (<i>téma</i>) represents the “place of articulation”, the location in the mouth where the sound is made. Each row  (<i>tyellë</i>) represents the “method of articulation”, the way in which the sound is made.</p>
 
 <p>For example, row 1 represents voiceless stops: <i>p, t, k</i>. Voiceless stops are made by briefly interrupting (stopping) the flow of breath and voiceless means the vocal chords do not resonate: compare voiceless <i>p, t, k</i> and voiced <i>b, d, g</i>. The columns represent the location where the tongue interrupts the sound: labial (near the lips) <i>p</i>, dental (near the teeth) <i>t</i>, velar (at the back of the mouth) <i>k</i> and labialized velar <i>kw</i> (<i>qu</i>), which is a velar with lip-rounding combined with a <i>w</i> sound.</p>
 
@@ -252,7 +254,7 @@
 
 <p>All of this indicates the depth at which Tolkien thought about his Elvish languages. Not only did he invent an elaborate script for writing his languages, he also decided how that script evolved over time as the sounds of the languages changed.</p>
 
-<p>For more information on the history of individual tengwar letters, a good resource is the Amanya Tenceli website: <a href="http://at.mansbjorkman.net/teng_quenya.htm">http://at.mansbjorkman.net/teng_quenya.htm</a>.</p>
+<p>For more information on the history of individual tengwar letters, a good resource is the Amanyë Tenceli website: <a href="http://at.mansbjorkman.net/teng_quenya.htm">http://at.mansbjorkman.net/teng_quenya.htm</a>.</p>
 </div>
 
 <h2><a id="c4-1-2"></a>4.1.2 Tengwar Vowel Tehta</h2>
@@ -530,7 +532,7 @@ Red tehta don’t work in safari
 
 <p>Some of the information above is also drawn from actual writing samples of tengwar, the most notable being Tolkien’s rendering of the <i>Namárië</i> poem in tengwar in <i>The Road Goes Ever On</i>, a book Tolkien published in 1967 in collaboration with Donald Swann putting many of Tolkien’s poems to music. Tolkien experimented with various ways to write Quenya using tengwar, and the system described in this course is largely based on the system he used for the <i>Namárië</i> poem.</p>
 
-<p>There are other ways to write tengwar, though, far too many for an introductory course like this. Mans Bjorkmans’s web site Amanya Tenceli (<a href="http://at.mansbjorkman.net/teng_quenya.htm">http://at.mansbjorkman.net/teng_quenya.htm</a>) is the best available resource on tengwar usage, so I recommend looking there if you want to learn more.</p>
+<p>There are other ways to write tengwar, though, far too many for an introductory course like this. Mans Bjorkmans’s web site Amanyë Tenceli (<a href="http://at.mansbjorkman.net/teng_quenya.htm">http://at.mansbjorkman.net/teng_quenya.htm</a>) is the best available resource on tengwar usage, so I recommend looking there if you want to learn more.</p>
 </div>
 
 <h2><a id="c4-1-6"></a>4.1.6 Simplified Tengwar Summary</h2>
@@ -1065,7 +1067,7 @@ Red tehta don’t work in safari
 
 <ul>
 <li><b>Instrumental:</b> Instrumental describes the means by which something happens, with the suffix <i>-nen</i> in the singular, usually translated in English as “with” or “by”.<ul>
-<li><span class="advanced-topic">Speculative:</span> After <i>r, l</i>, the instrumental suffix becomes <i>-men</i>, and after <i>c, n, t</i> it becomes <i>-wen</i>.</li>
+<li><span class="advanced-topic">Speculative:</span> After <i>r, l</i>, the instrumental suffix becomes <i>-men</i>, and after <i>n, t</i> it becomes <i>-wen</i>.</li>
 <li>In the plural, the instrumental suffix becomes <i>-inen</i> after the vowels <i>a, o, u</i>, and <i>-ínen</i> otherwise, replacing final vowels <i>ë, i</i>.</li>
 <li>The instrumental is <u>not</u> used for “together with”; that is the preposition <i>ó</i>.</li>
 </ul></li>
@@ -1496,7 +1498,7 @@ This summary outlines common past forms of basic verbs, but not every verb follo
 
 <blockquote>The chosen names were regarded by the Noldor as part of their personal property, like (say) their rings, cups, or knives, or other possessions which they could lend, or share with kindred and friends, but which could not be taken without leave. The use of the chosen name, except by members of the same house (parents, sisters, and brothers), was a token of closest intimacy and love, when permitted. It was, therefore, presumptuous or insulting to use it without permission (MR/215).</blockquote>
 
-<p>Thus among the Noldor, father names or mothers name were most often used in public contexts, while the chosen name was a private name used only among family and close friends or lovers. A fourth type of name sometimes appears, acquired later in life, called a “given name” <i>anessë</i> or an “after name” <i>epessë</i>:</p>
+<p>Thus among the Noldor, father names or mother names were most often used in public contexts, while the chosen name was a private name used only among family and close friends or lovers. A fourth type of name sometimes appears, acquired later in life, called a “given name” <i>anessë</i> or an “after name” <i>epessë</i>:</p>
 
 <blockquote>There was another source of the variety of names borne by any one of the Eldar ... This was found in the <i>Anessi</i>: the given (or added) names ... [these] “given names” were not true names, and indeed might not be recognized by the person to whom they were applied, unless they were actually adopted or self-given. Names, or nicknames, of this kind might be given by anyone, not necessarily by members of the same house or kin, in memory of some deed, or event, or in token of some marked feature of body or mind. They were seldom included in the “full title”, but when they were, because of their wide use and fame, they were set at the end (MR/216).</blockquote>
 
@@ -1510,7 +1512,7 @@ This summary outlines common past forms of basic verbs, but not every verb follo
 
 <p>The most ancient Elvish names, such as <i>Ingwë</i>, <i>Finwë</i> or <i>Elwë</i>, often do not have clear meanings. But in later days, most Elvish names are built from recognizable word elements. An Elvish name cannot be a simple word like “Rose”, however:</p>
 
-<blockquote>The mere names of things, such as “hill, river, tree”, and especially of unique things, as “sun”, were not used, at any rate without differentiation: ... for that would imply some kind of total equation or identity. An Elf (or Man) would not be called <i>Anar</i> “Sun” even to depict great glory or radiant vigour ... But an Elf or Man could be called <i>Anarion, Anardil</i> (PE21/86).</blockquote>
+<blockquote>The mere names of things, such as “hill, river, tree”, and especially of unique things, as “sun”, were not used, at any rate without differentiation: ... for that would imply some kind of total equation or identity. An Elf (or Man) would not be called <i>Anar</i> “Sun” even to depict great glory or radiant vigour ... But an Elf or Man could be called <i>Anárion, Anardil</i> (PE21/86).</blockquote>
 
 <p>As such, Quenya names usually consist of two elements in a compound, generally being three or four (or rarely five) syllables in length. Quenya names generally follow several patterns:</p>
 
@@ -1640,7 +1642,7 @@ This summary outlines common past forms of basic verbs, but not every verb follo
 <li><b>hresta</b> <i>n.</i> “shore, beach”</li>
 <li><b>maiwë</b> <i>n.</i> “gull”</li>
 <li><b>man</b> <i>pron.</i> “who”</li>
-<li><b>metima</b> <i>adj.</i> “last”</li>
+<li><b>métima</b> <i>adj.</i> “last”</li>
 <li><b>ve</b> <i>prep.</i> “as, like” ²</li>
 <li><b>yaimë</b> <i>n.</i> “wail”</li>
 <li><b>yaimëa</b> <i>adj.</i> “wailing”</li>
@@ -1704,7 +1706,7 @@ in her cold bosom<br/>
 like gulls wailing?
 </blockquote>
 
-<p>This English translations aligns pretty closely to the literal interpretation above if you accept “is cutting/cleaving from” as a poetic expression for “is leaving”. Compare English “the last shore” to Quenya <i>métima hresta</i>, which lacks <i>i</i>. This seems to be another case where English uses the definite article but Quenya does not: when a noun has a determining adjective like “first, last”. English itself omits “the” after numbers: “one ship, two ships”, but it seems Quenya omits it with some other qualifiers as well.</p>
+<p>This English translation aligns pretty closely to the literal interpretation above if you accept “is cutting/cleaving from” as a poetic expression for “is leaving”. Compare English “the last shore” to Quenya <i>métima hresta</i>, which lacks <i>i</i>. This seems to be another case where English uses the definite article but Quenya does not: when a noun has a determining adjective like “first, last”. English itself omits “the” after numbers: “one ship, two ships”, but it seems Quenya omits it with some other qualifiers as well.</p>
 
 <p>Finally, the first line of the original poem actually has <i>M<u>e</u>n cenuva fána cirya</i> with <i>e</i> instead of <i>a</i> in <i>man</i> “who”, but this is clearly some kind of error, since the word for “who” is <i>man</i> in all later stanzas of the poem.</p>
 
@@ -1928,7 +1930,7 @@ like gulls wailing?
 <li><b>lúva</b> <i>n.</i> “bow, bend”</li>
 <li><b>maiwë</b> <i>n.</i> “gull”</li>
 <li><b>man</b> <i>pron.</i> “who”</li>
-<li><b>metima</b> <i>adj.</i> “last”</li>
+<li><b>métima</b> <i>adj.</i> “last”</li>
 <li><b>nólë</b> [<b>ñ</b>] <i>n.</i> “lore, knowledge”</li>
 <li><b>olva</b> <i>n.</i> “plant”</li>
 <li><b>resta</b> <i>n.</i> “field (tilled)”</li>
@@ -2057,7 +2059,7 @@ like gulls wailing?
 <li>The basic Quenya word order is: subject, verb, object.</li>
 <li>Adjectives precede their noun and prepositions precede their phrase.</li>
 <li>Words with noun cases are freer in their word order.</li>
-<li>There are number of special circumstance where the usual order is violated, especially in poetry and with pronouns.
+<li>There are number of special circumstances where the usual order is violated, especially in poetry and with pronouns.
 <ul>
 <li>The subject suffix comes after the verb.</li>
 <li>Pronoun objects sometimes precede the verb.</li>
