--- a/src/main/webapp/intro-quenya/index.html
+++ b/src/main/webapp/intro-quenya/index.html
@@ -27,6 +27,14 @@
 <li><b><a href="eldamo-intro-quenya-04.html">Chapter 4</a></b></li>
 <li><b><a href="eldamo-intro-quenya-05.html">Chapter 5</a></b></li>
 <li><b><a href="eldamo-intro-quenya-06.html">Chapter 6</a></b></li>
+<li><b><a href="eldamo-intro-quenya-07.html">Chapter 7</a></b></li>
+</ul>
+
+<p>Memrise vocabulary courses:</p>
+
+<ul>
+<li><b><a href="https://app.memrise.com/course/6329970/eldamo-intro-quenya-ch-1/">Vocabulary for Chapter 1</a></b></li>
+<li><b><a href="https://app.memrise.com/course/6334816/eldamo-intro-quenya-ch-2/">Vocabulary for Chapter 2</a></b></li>
 </ul>
 
 </body>
